k3s/generated_manifests/jellyfin/Deployment-jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/version: 10.11.8
    helm.sh/chart: jellyfin-3.2.0
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: jellyfin
      app.kubernetes.io/name: jellyfin
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: jellyfin
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: jellyfin
        app.kubernetes.io/version: 10.11.8
        helm.sh/chart: jellyfin-3.2.0
    spec:
      containers:
        - image: docker.io/jellyfin/jellyfin:10.11.8
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
          name: jellyfin
          ports:
            - containerPort: 8096
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
          resources:
            limits:
              gpu.intel.com/i915: 1000m
          securityContext: {}
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: http
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media
              name: media
              readOnly: false
            - mountPath: /cache
              name: cache
      securityContext: {}
      serviceAccountName: jellyfin
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: media
          persistentVolumeClaim:
            claimName: pvc-movies-ro
        - emptyDir: {}
          name: cache
