k3s/generated_manifests/jellyfin/Service-jellyfin-tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: jellyfin.doma.lol
    external-dns.alpha.kubernetes.io/target: homelab-1.boreal-scala.ts.net
  name: jellyfin-tailscale
  namespace: jellyfin
spec:
  clusterIP: None
  type: ClusterIP
