k3s/generated_manifests/jellyfin/Service-jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/version: 10.11.8
    helm.sh/chart: jellyfin-3.2.0
  name: jellyfin
  namespace: jellyfin
spec:
  ports:
    - name: http
      port: 8096
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  type: ClusterIP
