k3s/generated_manifests/jellyfin/Ingress-jellyfin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  ingressClassName: traefik
  rules:
    - host: jellyfin.doma.lol
