k3s/generated_manifests/jellyfin/IngressRoute-jellyfin.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`jellyfin.doma.lol`)
      services:
        - name: jellyfin
          port: 8096
  tls:
    certResolver: letsencrypt
    domains:
      - main: doma.lol
        sans:
          - '*.doma.lol'
